# cjwt

./: .clang-format  .codecov.yml  .gitignore  .lgtm.yml  .sonar-project.properties  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  meson.build  test.chinasoft.测试
.github/scripts/: get_coverity.sh  make_release_artifacts.sh
.github/workflows/: code-format.yml  codeql-analysis.yml  coverity.yml  license.yml  push.yml  release.yml  tag.yml
.reuse/: dep5
cmake/: BitwiseVersion.cmake  Coverage.cmake  FindCunit.cmake  FindTrowerBase64.cmake  FindcJSON.cmake  LicenseLinterTarget.cmake  LocalInstallPaths.cmake
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  es_example.c  hs_example.c  ps_example.c  rs_example.c
include/cjwt/: cjwt.h  cjwtver.h.in  meson.build
src/: CMakeLists.txt  adapter.c  b64.c  b64.h  cjwt.c  cjwt.c.orig  cjwt.h  cjwtver.h.in  internal.h  jws.h  jws_evp_openssl.c  jws_openssl_1.c  jws_openssl_3.c  print.c  utils.c  utils.h
subprojects/: cjson.wrap  trower-base64.wrap
tests/: CMakeLists.txt  cjwt_test.c  test_b64.c  test_cjwt.c  test_cjwt_new.c  test_map.c  test_print.c  test_utils.c
tests/inputs/: bad_aud.txt  bad_es256.txt  bad_exp.txt  bad_iat.txt  bad_jti.txt  bad_nbf.txt  bad_sub.txt  hs384.jwt  invalid_1.txt  jwt10_hs512.txt  jwt10_no_sig.txt  jwt11.txt  jwt12.txt  jwt13.txt  jwt5x_no_sig.txt  jwt5x_ws_sig.txt  jwt8_hs256.txt  jwt9_hs384.txt  jwt_inv_aud.txt  jwt_inv_aud2.txt  jwt_r11.txt  jwtbadalg.txt  jwtr1.txt  jwtr2.txt  key10_hs512.pem  key8_hs256.pem  key9_hs384.pem  pubkey_jwr1.pem  rs-alt.pub  rs256.jwt  try_1.inv
tests/new_inputs/: es256.jwt  es384.jwt  es512.jwt  hdr_b64.inv  hs256.jwt  hs512.jwt  ps256.jwt  ps384.jwt  ps512.jwt  rs-alt.key  rs.partial  rs384.jwt  rs512.jwt  sig_b64.inv  try_2.inv  try_4.inv  try_5.inv
